# dvrui

./: .gitignore  CMakeLists.txt  WidgetKeyboard.cpp  WidgetKeyboard.ui_parameters  dvr_defines.h  dvr_formatconfirm.cpp  dvr_formatconfirm.ui  dvr_login.cpp  dvr_login.ui  dvr_main.cpp  dvr_main.pro  dvr_main.qrc  dvr_message.ui  dvr_setup.cpp  dvr_setup.h  dvr_setup_audio.cpp  dvr_setup_backup.cpp  dvr_setup_storage.cpp  dvr_sidebar.cpp  dvr_timelinebar_play.cpp  dvr_timelinebar_play.ui  dvr_toolbar_main.cpp  dvr_toolbar_main.ui  dvr_toolbar_sub.ui  dvr_util.cpp  eventlogdialog.cpp  eventlogdialog.h  eventlogdialog.ui  main.cpp  notifydialog.ui  struct.h
include/: app_manager.h  coordinator.h  define.h  dvr_app_api.h  dvr_defines.h  dvr_login.h  dvr_main.h  dvr_message.h  dvr_sidebar.h  dvr_statusbar.h  dvr_timelinebar_play.h  dvr_util.h  notifydialog.h  predefine.h  strdefine.h
src/: WidgetKeyboard.h  WidgetKeyboard.ui  dvr_formatconfirm.h  dvr_layout_main.cpp  dvr_layout_main.h  dvr_layout_main.ui  dvr_main.ui  dvr_message.cpp  dvr_setup.ui  dvr_setup_camera.cpp  dvr_setup_dio.cpp  dvr_setup_display.cpp  dvr_setup_event.cpp  dvr_setup_network.cpp  dvr_setup_record.cpp  dvr_setup_system.cpp  dvr_sidebar.ui  dvr_statusbar.cpp  dvr_statusbar.ui  dvr_toolbar_main.h  dvr_toolbar_sub.cpp  dvr_toolbar_sub.h  main.cpp  notifydialog.cpp
